--- a/_posts/2021-11-11-Day-4.md
+++ b/_posts/2021-11-11-Day-4.md
@@ -23,8 +23,8 @@ Today's agenda is to finish watch all videos on wattle and make a cheatsheet for
 | 16 - 17 |    videos & ppt    |         mock exam         |                              |
 | 17 - 18 |       videos       | mock exam; prepare notes; |                              |
 | 18 - 19 |  go back; dinner;  |                           |    prepare notes instead     |
-| 19 - 20 |  go back; dinner;  |                           | or review assignment answers |
-| 21 - 22 |   A4 cheatsheet;   |                           |                              |
-| 22 - 23 |    read; blog;     |                           |                              |
-| 23 - 24 |       blog;        |                           |                              |
+| 19 - 20 |                    |     shower; exercise;     | or review assignment answers |
+| 21 - 22 |   A4 cheatsheet;   | struggling... anxiety...  |                              |
+| 22 - 23 |    read; blog;     |  still too much anxiety   |                              |
+| 23 - 24 |       blog;        |   calm down a little...   |      prepare P&NP part       |
 |         |                    |                           |                              |
