--- a/_posts/2022-07-10-Profile.md
+++ b/_posts/2022-07-10-Profile.md
@@ -8,27 +8,6 @@ category:
   - "Miscellaneous"
 ---
 
-<!-----
-
-Yay, no errors, warnings, or alerts!
-
-Conversion time: 0.381 seconds.
-
-
-Using this HTML file:
-
-1. Paste this output into your source file.
-2. See the notes and action items below regarding this conversion run.
-3. Check the rendered output (headings, lists, code blocks, tables) for proper
-   formatting and use a linkchecker before you publish this page.
-
-Conversion notes:
-
-* Docs to Markdown version 1.0β33
-* Sat Jul 09 2022 18:54:26 GMT-0700 (PDT)
-* Source doc: [Updated] Tian(Phillip)Wu-PY-CV-GH
------>
-
 <p>
 <strong>Tian (Phillip) Wu</strong>
 </p>
@@ -45,13 +24,16 @@ Chapman, Canberra
 <a href="https://www.linkedin.com/in/tian-phillip-wu/">https://www.linkedin.com/in/tian-phillip-wu/</a> 
 </p>
 <p>
-<strong>Objective</strong>
+<hr>
+<strong><h2>Objective</h2></strong>
 </p>
 <p>
 I am seeking a full time job as a software developer that is focused in areas including web development, mobile application development, and embedded system engineering. With experience and enthusiasm in building both software applications and hardware projects, I aspire to create fun and quality applications to make a difference in the digital world.
 </p>
 <p>
-<strong>Education </strong>
+
+<hr>
+<strong><h2>Education </h2></strong>
 </p>
 <p>
 <strong>Professional Year Program	</strong> March 2022 - Present
@@ -69,7 +51,8 @@ The Australian National University, Canberra ACT
 					
 </p>
 <p>
-<strong>Employment Experience</strong>
+<hr>
+<strong><h2>Employment Experience</h2></strong>
 </p>
 <p>
 <strong>Centre for Gravitational Astrophysics, Acton ACT  </strong>	 February 2022 - Present
@@ -79,7 +62,7 @@ Technical Assistant
 </p>
 <ul>
 
-<li>Develop software interfaces for mechanical equipments in the lab
+<li>Develop software interfaces for mechanical equipments in the lab</li>
 
 <li>Conduct routine maintenance of laboratory and control systems
 </li>
@@ -100,13 +83,14 @@ Software Engineer
 </p>
 <ul>
 
-<li>Develop cross-platform applications with Dart and Flutter
+<li>Develop cross-platform applications with Dart and Flutter</li>
 
 <li>Integrate Solid Pods into applications for better security and privacy experience
 </li>
 </ul>
 <p>
-<strong>Degree Related Projects</strong>
+<hr>
+<strong><h2>Degree Related Projects</h2></strong>
 </p>
 <p>
 <strong>TechLauncher Project with ANFF OptoFab<em> 	</em></strong>		February 2021 - October 2021
@@ -119,35 +103,36 @@ The Australian National University, Canberra
 </p>
 <ul>
 
-<li>Participated in the website prototyping and layout design for the application
+<li>Participated in the website prototyping and layout design for the application</li>
 
-<li>Engaged in the front-end development of the web application using React.js
+<li>Engaged in the front-end development of the web application using React.js</li>
 
 <li>Successfully deployed the website application to ANU domain server
 </li>
 </ul>
-<p>
-<strong>Skills</strong> 
-</p>
+
+<hr>
+
+<h2>Skills</h2>
 <ul>
+<li>Develop embedded control systems using microcontrollers</li>
 
-<li>Develop embedded control systems using microcontrollers
+<li>Design Python interfaces for hardware communications</li>
 
-<li>Design Python interfaces for hardware communications
+<li>Create board games in Java using JavaFX</li>
 
-<li>Create board games in Java using JavaFX
+<li>Program full-stack applications with JavaScript frameworks</li>
 
-<li>Program full-stack applications with JavaScript frameworks
+<li>Scale applications and databases with efficient API development</li>
 
-<li>Scale applications and databases with efficient API development
-
-<li>Administer Linux jobs and streamline workflows with CI/CD best practices
+<li>Administer Linux jobs and streamline workflows with CI/CD best practices</li>
 
 <li>Communicate effectively within a team environment with critical thinking and problem solving skills
 </li>
 </ul>
 <p>
-<strong>Qualifications and Memberships</strong>
+<hr>
+<strong><h2>Qualifications and Memberships</h2></strong>
 </p>
 <ul>
 
@@ -155,7 +140,7 @@ The Australian National University, Canberra
 </li>
 </ul>
 <p>
-<strong>Volunteer Work</strong>
+<h2>Volunteer Work</h2>
 </p>
 <p>
 <strong>Orange Sky Australia   </strong>	October 2021  - Present
@@ -172,7 +157,8 @@ General Hand
 </li>
 </ul>
 <p>
-<strong>Referees </strong>
+<hr>
+<strong><h2>Referees</h2> </strong>
 </p>
 <p>
 Referees are available upon request
