fix pdf name issue in markdown link

--- a/_posts/2022-07-10-Profile.md
+++ b/_posts/2022-07-10-Profile.md
@@ -8,6 +8,8 @@ category:
   - "Miscellaneous"
 ---
 
+[Download](</assets/Tian(Phillip)Wu-PY-CV-GH.pdf>) PDF version
+
 <p>
 <a href="mailto:tianwu@outlook.com">tianwu@outlook.com</a> 
 </p>
